--- a/Converter.html
+++ b/Converter.html
@@ -24,7 +24,8 @@ $.ajax({
 	dataType: "jsonp",
 
     success: function( data ) {
-        console.log( data );
+        console.log( JSON.stringify(data) );
+		$("#result").html(JSON.stringify(data));
 		 $.ajax({
             url: "localhost/save.php",
 	dataType: "jsonp",
